<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical"
    android:id="@+id/layout_register">

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/Register_Input"
            android:layout_weight="1000"
            android:layout_gravity="bottom">

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/login_nick"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nick"
                style="@style/Register_Edit"
                android:paddingLeft="12dp"
                android:hint="@string/login_nick_hint" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_avatar"
            style="@style/Smile.ImageView"
            android:layout_width="74dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_avatar"
            android:clickable="true"/>

    </LinearLayout>


    <LinearLayout style="@style/Register_Input" >
        <RelativeLayout
            android:id="@+id/layout_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/login_gender"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/Smile.TextView._Black"
                    android:text="男"
                    android:paddingRight="10dp"/>

                <ImageView
                    style="@style/Smile.ImageView"
                    android:layout_width="20dp"
                    android:contentDescription="@string/action_settings"
                    android:src="@drawable/register_bottom_arrow" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>



    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:paddingLeft="12dp"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
            android:paddingLeft="12dp"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd_again"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_pwd_again"
            style="@style/Register_Edit"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:hint="@string/login_pwd_again_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>